resources/public/api/conf/1.0/scenarios/crystallisation/crystallisation.md
<p>Scenario simulations using Gov-Test-Scenario headers is only available in the sandbox environment.</p>
<table>
    <thead>
        <tr>
            <th>Header Value (Gov-Test-Scenario)</th>
            <th>Scenario</th>
        </tr>
    </thead>
    <tbody> 
        <tr>
            <td><p>N/A - DEFAULT</p></td>
            <td><p>Simulates a successful response.</p></td>
        </tr>         
        <tr>
            <td><p>INCOME_SOURCES_CHANGED</p></td>
            <td><p>Simulates the scenario where information relating to an income source has changed.</p></td>
        </tr>   
        <tr>
            <td><p>RECENT_SUBMISSIONS_EXIST</p></td>
            <td><p>Simulates the scenario where more recent submission exists.</p></td>
        </tr>   
        <tr>
            <td><p>RESIDENCY_CHANGED</p></td>
            <td><p>Simulates the scenario where residency has changed.</p></td>
        </tr>   
        <tr>
            <td><p>FINAL_DECLARATION_RECEIVED</p></td>
            <td><p>Simulates the scenario where a crystallisation declaration has already been received.</p></td>
        </tr>
        <tr>
            <td><p>NOT_FOUND</p></td>
            <td><p>Simulates the scenario where the supplied income source could not be found.</p></td>
        </tr>   
    </tbody>
</table>